# agenttrust

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  TODOS.md  docker-compose.yml
.cargo/: config.toml
contracts/: Anchor.toml  Cargo.toml  Dockerfile  package-lock.json  package.json  tsconfig.json
contracts/.solana-config/: id.json
contracts/.solana-config/cli/: config.yml
contracts/programs/agent_trust/: Cargo.toml
contracts/programs/agent_trust/src/: lib.rs
contracts/squads/: chain-worker.ts  debug-agent.ts  debug-multisig.ts  multisig-config.json  setup-devnet.ts  setup-multisig.ts
contracts/tests/: agent_trust.ts  multisig_authority.ts
design/reference/: agent-profile.html  dashboard.html  landing.html  marketplace.html
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/[id]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: Nav.tsx  TrustGauge.tsx
frontend/lib/: api.ts  session.ts
services/agent-core/: Cargo.toml
services/agent-core/migrations/: 0001_init.sql
services/agent-core/src/: db.rs  handlers.rs  main.rs
services/audit-engine/: Cargo.toml
services/audit-engine/migrations/: 0001_init.sql
services/audit-engine/src/: db.rs  handlers.rs  judge.rs  main.rs
services/blockchain-service/: Cargo.toml
services/blockchain-service/migrations/: 0001_init.sql
services/blockchain-service/src/: db.rs  handlers.rs  main.rs  worker.rs
services/gateway/: Cargo.toml
services/gateway/src/: auth.rs  main.rs
services/identity-service/: Cargo.toml
services/identity-service/migrations/: 0001_init.sql  0002_trust_score.sql
services/identity-service/src/: db.rs  handlers.rs  main.rs
services/policy-engine/: Cargo.toml
services/policy-engine/src/: main.rs
shared/: Cargo.toml
shared/src/: error.rs  internal_auth.rs  lib.rs  types.rs
