[workspace]
resolver = "2"
members = [
    "shared",
    "services/identity-service",
    "services/gateway",
    "services/policy-engine",
    "services/agent-core",
    "services/audit-engine",
    "services/blockchain-service",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
