[package]
name = "gateway"
edition.workspace = true
version.workspace = true

[dependencies]
shared = { path = "../../shared" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
